# ARBITRAGEXPLUS2025

./: .editorconfig  .env.example  .env.excel.example  .gitignore  ARCHIVOS_CREADOS_8_AREAS.md  ARCHIVOS_CREADOS_SESION.md  CHANGELOG.md  CHECKLIST-MANU-COMPLETO.md  CHECKLIST_MANU_MASTER.md  CONFIGURAR_GOOGLE_SHEET.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DIAGNOSTICO.bat  DIAGRAMA_ARQUITECTURA.md  EJECUTAR_DESDE_CUALQUIER_LUGAR.bat  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT_8_AREAS.md  IMPLEMENTACION_PROMPT_SUPREMO.md  IMPLEMENTATION_SUMMARY.md  INICIO_RAPIDO.md  INSTALAR_VBA.bat  INSTALAR_VBA.ps1  INSTRUCCIONES_WINDOWS.md  MIGRACION_EXCEL_COMPLETADA.md  NUEVOS_ORACULOS_REPORTE.md  OPCION1_GenerarToken.ps1  OPCION2_DeploymentManual.ps1  OPCION3_ConfigurarGitHubActions.ps1  PROMPT_SUPREMO_DEFINITIVO_COMPLETADO.md  PROMPT_SUPREMO_DEFINITIVO_LISTA_TAREAS_COMPLETADO.md  PROXIMOS_PASOS_COMPLETADOS.md  README.md  README_CORRECCIONES.md  README_ES.md  README_EXCEL.md  REPORTE_FINAL_IMPLEMENTACION.md  REPORTE_SINCRONIZACION_BIDIRECCIONAL.md  RESUMEN_EJECUTIVO.md  RUN.bat  RUN_SIMPLE.bat  (+18 more)
services/engine-rust/: Cargo.toml
services/engine-rust/benches/: benchmark.rs
services/engine-rust/src/: lib.rs  main.rs
services/engine-rust/src/connectors/: blockchain.rs  mod.rs  sheets.rs
services/engine-rust/src/engine/: arbitrage.rs  mod.rs  optimizer.rs
services/engine-rust/src/ffi/: mod.rs
services/engine-rust/src/pathfinding/: mod.rs  ranking.rs  three_dex.rs  two_dex.rs  twodex.rs  twodex_dp.rs  (+2 more)
services/engine-rust/tests/: integration_test.rs
(+455 files in other folders)
